compile_error.txt


###################### OPENCL PROGRAM BUILD DEBUG OUTPUT ######################

C:\Users\farre\AppData\Local\Temp\comgr-217ec6\input\CompileSource:38:12: error: expected '(' after 'if'
        if signbit(val) {
           ^
1 error generated.
Error: Failed to compile source (from CL or HIP source to LLVM IR).
###############################################################################

